@@ -4,15 +4,18 @@ import com.example.backend.Repository.EnfantRepository;
 import com.example.backend.Repository.EventRepository;
 import com.example.backend.Repository.EventTypeRepository;
 import com.example.backend.Repository.MereRepository;
+import com.example.backend.Repository.FamilleRepository;
 import com.example.backend.model.Enfant;
 import com.example.backend.model.Event;
 import com.example.backend.model.EventType;
 import com.example.backend.model.Mere;
+import com.example.backend.model.Famille;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class EventService {
@@ -21,16 +24,19 @@ public class EventService {
     private final EventTypeRepository eventTypeRepository;
     private final MereRepository mereRepository;
     private final EnfantRepository enfantRepository;
+    private final FamilleRepository familleRepository;
 
     // Injecter tous les repositories
     public EventService(EventRepository eventRepository,
                         EventTypeRepository eventTypeRepository,
                         MereRepository mereRepository,
-                        EnfantRepository enfantRepository) {
+                        EnfantRepository enfantRepository,
+                        FamilleRepository familleRepository) {
         this.eventRepository = eventRepository;
         this.eventTypeRepository = eventTypeRepository;
         this.mereRepository = mereRepository;
         this.enfantRepository = enfantRepository;
+        this.familleRepository = familleRepository;
     }
 
     // --------------------- EVENTS ---------------------
@@ -49,7 +55,6 @@ public class EventService {
             Optional<EventType> typeOpt = eventTypeRepository.findById(event.getEventType().getId());
             typeOpt.ifPresent(event::setEventType);
         }
-
         return eventRepository.save(event);
     }
 
@@ -62,18 +67,36 @@ public class EventService {
     }
 
     // --------------------- PARTICIPANTS ---------------------
+    // MERES
     public List<Mere> getMeresByIds(List<Integer> ids) {
-        List<Long> longIds = ids.stream()
-                .map(Integer::longValue)
-                .toList(); // ou collect(Collectors.toList())
+        List<Long> longIds = ids.stream().map(Integer::longValue).collect(Collectors.toList());
         return mereRepository.findAllById(longIds);
     }
 
+    public Mere getMereById(Long id) {
+        return mereRepository.findById(Long.valueOf(id))
+                .orElseThrow(() -> new RuntimeException("Mere not found"));
+    }
+
+    // ENFANTS
     public List<Enfant> getEnfantsByIds(List<Integer> ids) {
-        List<Long> longIds = ids.stream()
-                .map(Integer::longValue)
-                .toList();
+        List<Long> longIds = ids.stream().map(Integer::longValue).collect(Collectors.toList());
         return enfantRepository.findAllById(longIds);
     }
 
+    public Enfant getEnfantById(Long id) {
+        return enfantRepository.findById(Long.valueOf(id))
+                .orElseThrow(() -> new RuntimeException("Enfant not found"));
+    }
+
+    // FAMILLES
+    public List<Famille> getFamillesByIds(List<Integer> ids) {
+        List<Long> longIds = ids.stream().map(Integer::longValue).collect(Collectors.toList());
+        return familleRepository.findAllById(longIds);
+    }
+
+    public Famille getFamilleById(Long id) {
+        return familleRepository.findById(Long.valueOf(id))
+                .orElseThrow(() -> new RuntimeException("Famille not found"));
+    }
 }
